[project]
name = "gard-rail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "fastapi>=0.138.0",
    "huggingface-hub>=1.20.1",
    "modal>=1.5.0",
    "transformers[torch]>=5.12.1",
    "uvicorn>=0.49.0",
]
